tests/newblob/not_blob.sy
A :: newblob { }
B :: blob { }

make_a : fn -> A : external

start :: fn do
  x := B { }
  x = make_a'
end

// error: $Mismatch
